--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,22 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ToolbarTheme"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                <androidx.appcompat.widget.SwitchCompat
+                    android:layout_gravity="end"
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/changetheme"
+                    android:layout_width="@dimen/_60dp"
+                    app:showText="true"
+                    android:checked="false"
+                    android:textSize="@dimen/_14sp"
+                    app:track="@drawable/custom_track"
+                    android:thumb="@drawable/custom_thumb"
+                    android:layout_height="@dimen/dp_35dp"/>
+
+
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
