--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="teal_500">#FF535F</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red_light">#FD9A9A</color>>
+    <color name="greencolor">#39B54A</color>
+    <color name="red">#FA1818</color>>
+    <color name="subheading">#A2A2A2</color>
+
 </resources>
