--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/feedFragment"
         android:icon="@drawable/explore"
@@ -10,7 +9,5 @@
         android:id="@+id/bookmarkFragment"
         android:icon="@drawable/baseline_bookmark_border_24"
         android:title="@string/favorites" />
-
-
 
 </menu>
